# TaskManagerPro

./: CMakeLists.txt  KanbanView.qml  Main.qml  README.md  Repl.cpp  Repl.h  Task.cpp  Task.h  TaskListModel.cpp  TaskListModel.h  TaskManager.cpp  TaskManager.h  TaskStore.cpp  TaskStore.h  main.cpp
